[JENKINS-67974] [JENKINS-68019] Upgrade INSANE (#416)